--- a/ansible/roles/docker/tasks/centos.yml
+++ b/ansible/roles/docker/tasks/centos.yml
@@ -33,7 +33,7 @@
  
 - name:  Install validated  Docker  
   yum:
-    name: "docker-ce-18.06.0.ce-3.el7"
+    name: "docker-ce-18.09.1-3.el7"
     state: present
   tags: [docker]
 
