--- a/ansible/roles/kubernetes/master/tasks/main.yml
+++ b/ansible/roles/kubernetes/master/tasks/main.yml
@@ -1,19 +1,35 @@
 ---
 
-- name: Check if kubeadm has already run
-  stat:
-    path: "/etc/kubernetes/pki/ca.key"
-  register: kubeadm_ca
-
-- name: Init cluster if needed
-  include_tasks: init.yml
-  when: not kubeadm_ca.stat.exists
-  run_once: yes
-
-- name: Enable and check kubelet service
-  systemd:
-    name: kubelet
-    daemon_reload: yes
-    state: started
-    enabled: yes
-  register: started_kubelet
+  - name: Check if kubeadm has already run
+    stat:
+      path: "/etc/kubernetes/pki/ca.key"
+    register: kubeadm_ca
+  
+  - name: Init cluster if needed
+    include_tasks: init.yml
+    when: not kubeadm_ca.stat.exists
+    run_once: yes
+  
+  - name: Enable and check kubelet service
+    systemd:
+      name: kubelet
+      daemon_reload: yes
+      state: started
+      enabled: yes
+    register: started_kubelet
+  
+  - name: kubeadm token create --print-join-command
+    shell: |
+        kubeadm token create --print-join-command                
+    register: node_join_shell   
+  
+  - name: display node_join_shell
+    debug:
+      msg:  " {{ node_join_shell.stdout }} "  
+  
+  - name: Define node_join_shell
+    set_fact:
+      node_join_shell: "{{ node_join_shell.stdout }}"
+  
+  - name: display global variable
+    debug: msg="{{ hostvars[groups['master'][0]]['node_join_shell']  }}"
