--- a/ansible/roles/docker/tasks/centos.yml
+++ b/ansible/roles/docker/tasks/centos.yml
@@ -30,10 +30,24 @@
   when: docker_yum_repo.changed
   tags: [docker] 
 
- 
+
+#https://kubernetes.io/docs/setup/production-environment/container-runtimes/ 
+- name:  Install validated  containerd.io
+  yum:      
+    name: "containerd.io-1.2.13"
+    state: present
+  tags: [docker]
+
 - name:  Install validated  Docker  
-  yum:
-    name: "docker-ce-18.09.1-3.el7"
+  yum:     
+    #name: "docker-ce-18.09.1-3.el7"
+    name: "docker-ce-19.03.8"
+    state: present
+  tags: [docker]
+  
+- name:  Install validated  Docker-Cli
+  yum:      
+    name: "docker-ce-cli-19.03.8"
     state: present
   tags: [docker]
 
@@ -42,6 +56,7 @@
 #     name: "docker"
 #     state: present
 #   tags: [docker]
+
 
 - name: python-pip is present
   yum:
