--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -3,6 +3,7 @@
 
 # Kubernetes
 kube_version: v1.16.15
+kube_version_code: 1.16.15-0
 token: b0f7b8.8d1767876297d85c
 
 # 1.8.x feature: --feature-gates SelfHosting=true
