--- a/ansible/roles/docker/tasks/centos.yml
+++ b/ansible/roles/docker/tasks/centos.yml
@@ -11,12 +11,11 @@
   tags: [docker]
 
 - name: Install Docker required packages
-  yum: name={{ item }} state=present
-  with_items:
-    - yum-utils
-    - device-mapper-persistent-data
-    - lvm2
+  yum: 
+    name: "{{ docker_centos_dependencies }}"
+    state: present
   tags: [docker]  
+
 
 - name: add docker ce repo
   shell: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
@@ -26,10 +25,10 @@
   tags: [docker]  
   
 - name: make yum cache fast
-  shell: yum makecache fast
+  shell: yum makecache fast  
   when: docker_yum_repo.changed
+  become: yes
   tags: [docker] 
-
 
 #https://kubernetes.io/docs/setup/production-environment/container-runtimes/ 
 - name:  Install validated  containerd.io
@@ -40,7 +39,6 @@
 
 - name:  Install validated  Docker  
   yum:     
-    #name: "docker-ce-18.09.1-3.el7"
     name: "docker-ce-19.03.11"
     state: present
   tags: [docker]
@@ -56,7 +54,6 @@
 #     name: "docker"
 #     state: present
 #   tags: [docker]
-
 
 - name: python-pip is present
   yum:
